@@ -1,6 +1,6 @@
 python-toolbox2 (0.6.0~dev-1) unstable; urgency=low
 
-  * New upstream release, closes: #5764.
+  * New upstream release, closes: #5758, #5764.
   * Add a recommends for sjconf-toolbox2.
 
  -- Matthieu Bouron <matthieu.bouron@smartjog.com>  Thu, 12 Apr 2012 10:43:56 +0200
