@@ -8,6 +8,7 @@ Version 0.6.0~dev
 	* Make ffmpeg worker override output files by default.
 	* Add set_timecode method to ffmpeg worker.
 	* Support demuxing in ffmpeg worker.
+	* Remove dependency on sjfs from manzanita rewrap action, closes: #5758.
 
 Version 0.5.0 Released on 2012/03/29
 
